// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs> adds tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
    <!--TOPNAV-->
    <div class=\\"hig__global-nav__container__sub-nav\\">
    <div class=\\"hig__global-nav__container__sub-nav__left__icon\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left\\">Module Name</div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\">Well</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\">Hello</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\">World</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\">!</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__container__sub-nav__left__icon hig__global-nav__container__sub-nav__spacer\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left hig__global-nav__container__sub-nav__spacer\\">Module Name</div>
</div><!--SUBNAV-->
    <div class=\\"hig__global-nav__container__slot\\">
        <!--SLOT-->
    </div>
</div><!--CONTAINER-->
</div>"
`;

exports[`<Tabs> removes tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
    <!--TOPNAV-->
    <div class=\\"hig__global-nav__container__sub-nav\\">
    <div class=\\"hig__global-nav__container__sub-nav__left__icon\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left\\">Module Name</div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\">World</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__container__sub-nav__left__icon hig__global-nav__container__sub-nav__spacer\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left hig__global-nav__container__sub-nav__spacer\\">Module Name</div>
</div><!--SUBNAV-->
    <div class=\\"hig__global-nav__container__slot\\">
        <!--SLOT-->
    </div>
</div><!--CONTAINER-->
</div>"
`;

exports[`<Tabs> renders tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
    <!--TOPNAV-->
    <div class=\\"hig__global-nav__container__sub-nav\\">
    <div class=\\"hig__global-nav__container__sub-nav__left__icon\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left\\">Module Name</div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\">Hello</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\">World</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__container__sub-nav__left__icon hig__global-nav__container__sub-nav__spacer\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left hig__global-nav__container__sub-nav__spacer\\">Module Name</div>
</div><!--SUBNAV-->
    <div class=\\"hig__global-nav__container__slot\\">
        <!--SLOT-->
    </div>
</div><!--CONTAINER-->
</div>"
`;
